# playbook

./: .gitignore  README.md  index.html  main.py  package.json  requirements.txt  supabase_select_test.ipynb  test_api.py  test_openai.py
app/services/: openai_service.py  supabase_service.py
backend/: .env  README.md  README_SUPABASE.md  pyproject.toml  test_supabase.py
backend/app/: main.py
backend/app/api/v1/: generation.py  stories.py
backend/app/models/: generation.py
backend/database/: migration.sql  schema.sql
frontend/: README.md  ios_setup_instructions.md  pubspec.yaml
frontend/assets/Images/: README.md
frontend/assets/animations/: README.md  bee.riv  new_file.riv
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/api/: generation_api.dart  story_api.dart
frontend/lib/config/: supabase_config.dart
frontend/lib/flutter_application_1/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/models/: story.dart  user_plan.dart
frontend/lib/pages/: about_page.dart  license_page.dart  privacy_page.dart  privacy_policy_page.dart  terms_page.dart
frontend/lib/services/: purchase_service.dart  supabase_service.dart
frontend/test/: widget_test.dart
migrations/: add_prompt_logging.sql
